--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "cosmic-task-monitor"
 version = "0.1.0"
 edition = "2024"
 license = "MPL-2.0"
-description = "An application for look your system load isn a good and awesome way"
+description = "An application for look your system load in a good and awesome way"
 repository = "https://github.com/exepta/cosmic-task-monitor"
 
 [dependencies]
@@ -15,12 +15,15 @@ i18n-embed = { version = "0.16", features = [
 i18n-embed-fl = "0.10"
 open = "5.3.2"
 rust-embed = "8.8.0"
+sysinfo = "0.33.1"
 tokio = { version = "1.48.0", features = ["full"] }
 
 [dependencies.libcosmic]
 git = "https://github.com/pop-os/libcosmic.git"
 # See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
 features = [
+    # Desktop entry lookup APIs
+    "desktop",
     # Accessibility support
     "a11y",
     # About widget for the app
