update view of apps

--- a/resources/app.desktop
+++ b/resources/app.desktop
@@ -6,6 +6,7 @@ Icon=com.github.exepta.cosmic-task-monitor
 Exec=cosmic-task-monitor %F
 Terminal=false
 StartupNotify=true
+StartupWMClass=com.github.exepta.cosmic-task-monitor
 Categories=COSMIC
 Keywords=COSMIC
 MimeType=
